# django-postgres-copy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  manage.py  postgres_copy.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  version_scheme.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: codeql-analysis.yml  continuous-deployment.yaml  docs.yml  test.yaml
docs/: Makefile  conf.py  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.txt
docs/_static/css/: custom.css
postgres_copy/: __init__.py  admin.py  copy_from.py  copy_to.py  managers.py  psycopg_compat.py
postgres_copy/templates/admin/: import_change_list.html  upload.html
tests/: __init__.py  conftest.py  export.csv  fields.py  models.py  router.py  settings.py  test_fields.py  test_models.py  test_psycopg_compat.py  test_queries.py  tests.py  urls.py
tests/data/: backwards.csv  blanknulls.csv  fk_mappings.csv  foreignkeys.csv  mappings.csv  matching_headers.csv  names.csv  nulls.csv  pipes.csv  quote.csv  secondary_db.csv  special_names.csv
